tests/typescript/neg/simple/glob-00.ts
var glob /*@ { number | v > 10 } */ = 2;


